--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "trabajar asincronismo en js",
   "main": "src/index.js",
   "scripts": {
-    "callbacks": "node src/callback/index.js"
+    "callbacks": "node src/callback/index.js",
+    "callbacks:challenge": "node src/callback/challenge.js"
   },
   "keywords": [
     "callbacks",
