--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "callbacks": "node src/callback/index.js",
     "callbacks:challenge": "node src/callback/challenge.js",
     "promise": "node src/promise/index.js",
-    "promise:challenge": "node src/promise/challenge.js"
+    "promise:challenge": "node src/promise/challenge.js",
+    "async": "node src/async/index.js",
+    "async:challenge": "node src/async/challenge.js"
+
   },
   "keywords": [
     "callbacks",
